terraform/aws-basics/security-groups.tf
resource "aws_security_group" "allow_web" {
  name        = "allow-from-web"
  description = "Allow specified inbound traffic and all outbound traffic"
  vpc_id      = aws_vpc.vpc.id

  tags = {
    Name = "homelabs-security-group"
  }
}

resource "aws_vpc_security_group_ingress_rule" "allow_https" {
  description = "Allowing anybody to access our server over the internet on port 443"
  security_group_id = aws_security_group.allow_web.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  to_port           = 443
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_ingress_rule" "allow_http" {
  description = "Allowing anybody to access our server over the internet on port 80"
  security_group_id = aws_security_group.allow_web.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  to_port           = 80
  ip_protocol       = "tcp"
}


resource "aws_vpc_security_group_ingress_rule" "allow_ssh" {
  description = "Allowing anybody to access our server over the internet on port 22"
  security_group_id = aws_security_group.allow_web.id
  cidr_ipv4         = "0.0.0.0/0" 
  from_port         = 22
  to_port           = 22
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_egress_rule" "allow_all" {
  security_group_id = aws_security_group.allow_web.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}
